<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="module_desc">Launcher</string>
    <string name="app_name_launhcer">桌面</string>
    <string name="wechat_connect">智能微信</string>
    <string name="fetching_qr_code">正在为您重新加载...</string>
    <string name="retry_qr_code">网络异常，请重新加载</string>
    <string name="retry_qr_click_img">点击图标可重新加载</string>
    <string name="bind_wechat_tip">打开微信扫码二维码</string>
    <string name="bind_wechat_instruction">绑定微信可将微信中的位置、歌曲发送至车机，上车即可发起导航或收听歌曲</string>
    <string name="unbind_wechat">去解绑>></string>
    <string name="bind_wechat_success">微信号“XXXXX”已绑定该车机</string>
    <string name="unbind_wechat_fail">解绑失败请重新操作</string>
    <string name="app_mark_no_find">应用未安装</string>
    <string name="phone_to_car_dialog_title">导航通知</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="auto_check">收到飞幕后5s自动查看</string>
    <string name="received_picture">收到一张图片</string>
    <string name="received_video">收到一段视频</string>
    <string name="received_link">收到一条分享链接</string>
    <string name="open_picture">打开图片</string>
    <string name="open_video">打开视频</string>
    <string name="open_link">打开链接</string>
    <string name="temporary_poi">武汉天河国际机场</string>
    <string name="temporaty_location">湖北省武汉市黄陂区机场大道</string>
    <string name="log_test_plugin">插件</string>
    <string name="file_size"><![CDATA[&#160;&#160;&#160;&#160;%s]]></string>
    <string name="recent_booking">最近\n预定</string>
    <string name="recent_visiting">最近\n访问</string>
    <string name="collect">收藏</string>
    <string name="confirm_to_create">确定创建(%ds)</string>
    <string name="confirm_to_create2">确定创建</string>
    <string name="found_succeed">创建成功</string>
    <string name="call_phone">电话</string>
    <string name="guide_map">导航</string>
    <string name="book_order">预订</string>
    <string name="recom_hotel">酒店推荐</string>
    <string name="check_in_out">入住日期-退房日期</string>
    <string name="cancel_book">取消预订</string>
    <string name="book_success">预订成功</string>
    <string name="date_year_month">%1$d.%2$d</string>
    <string name="compile">编辑</string>
    <string name="finish">完成</string>
    <string name="no_order_hotel">暂无酒店订单</string>
    <string name="enable_activity_url">无效的活动链接</string>
    <string name="skip_time">跳过(%d秒)</string>
    <string name="audio_fragment_audio_source">音源</string>
    <string name="audio_fragment_audio_music">音乐</string>
    <string name="audio_fragment_audio_xting">电台</string>
    <string name="audio_fragment_audio_favorite">我的收藏</string>
    <string name="audio_fragment_audio_music_en">MUSIC</string>
    <string name="audio_fragment_audio_xting_en">RADIO</string>
    <string name="audio_fragment_audio_favorite_en">COLLECT</string>
    <string name="favorite_music">音乐收藏</string>
    <string name="favorite_xting">电台收藏</string>
    <string name="audio_type_xting_net_fm">在线电台</string>
    <string name="audio_type_xting_local_fm">本地电台</string>
    <string name="audio_type_music_online">在线音乐</string>
    <string name="audio_type_music_usb">USB音乐</string>
    <string name="audio_type_music_bt">蓝牙音乐</string>
    <string name="audio_play_back_main">返回主菜单</string>
    <string name="audio_play_mode_sequential">顺序播放</string>
    <string name="audio_play_mode_list_loop">循环播放</string>
    <string name="audio_play_mode_single_loop">单曲循环</string>
    <string name="audio_play_mode_shuffle">随机播放</string>
    <string name="audio_local_music_connect">已连接</string>
    <string name="audio_local_music_disconnect">未连接</string>
    <string name="no_audio_info">暂无歌曲</string>
    <string name="audio_first">已经是第一首了</string>
    <string name="audio_last">已经是最后一首了</string>
    <string name="audio_music_list">音乐列表</string>
    <string name="audio_no_network">网络异常,请稍后再试</string>
    <string name="audio_bt_play_error">蓝牙音乐播放失败</string>
    <string name="audio_usb_play_error">没有发现音乐文件哦</string>
    <string name="usb_audio_no_found">未识别到USB设备</string>
    <string name="bt_audio_no_found">未连接蓝牙音乐</string>
    <string name="collected_audio_success">收藏成功</string>
    <string name="un_collected_audio_success">已取消收藏</string>
    <string name="setting_pkg">com.xiaoma.setting</string>
    <string name="setting_main_cls">com.xiaoma.setting.main.ui.MainActivity</string>
    <string name="service_disconnect_press_again">服务重新连接,请点击重试</string>
    <string name="audio_fm_searching">搜台中&#8230;</string>
    <string name="audio_not_play">音频数据异常,无法播放</string>
    <string name="usb_audio_not_play">USB音乐播放失败</string>
    <string name="service_fragment_service_recommend">服务推荐</string>
    <string name="service_fragment_travel_service">出行服务</string>
    <string name="service_fragment_car_service">车辆服务</string>
    <string name="fragment_car_service_need_period">已达保养期</string>
    <string name="fragment_car_service_no_need_period">未达保养期</string>
    <string name="clear_date">清空日期</string>
    <string name="btn_sure">确认</string>
    <string name="row_col_price">%s排%s座&#160;%s元&#160;&#160;&#160;&#160;</string>
    <string name="film_duration">%s分钟</string>
    <string name="select_film">选择电影</string>
    <string name="stop_buy_tick">该场次停止购票，请选择其他场次</string>
    <string name="not_user_info">暂无用户信息</string>
    <string name="recom_film">电影推荐</string>
    <string name="cinema_landmark">%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%skm&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;</string>
    <string name="row_and_col">%s排%s座</string>
    <string name="film_name">《%s》</string>
    <string name="price_people">￥%s/人</string>
    <string name="film_price">%s/￥%s元起</string>
    <string name="film_min_price">￥%s元起</string>
    <string name="film_not_price">暂无价格</string>
    <string name="film_time_price">《%s》/%s元起</string>
    <string name="date_str_format">%d-%d-%d</string>
    <string name="landmark">%s|%skm|¥%s起</string>
    <string name="trailer">《%s》-预告片</string>
    <string name="seat_list">￥%s</string>
    <string name="not_slete_seat">没有选择座位</string>
    <string name="ticket_sheet">张</string>
    <string name="row">排</string>
    <string name="seat">座&#160;</string>
    <string name="yuan">元&#160;&#160;&#160;</string>
    <string name="seat_max_four">/4）</string>
    <string name="seat_list_zero_four">座位列表（0/4）</string>
    <string name="select_session_and_seats">选择场次和座位</string>
    <string name="scan_code_pay">扫码支付</string>
    <string name="right_now_buy_film_ticket">立即购票</string>
    <string name="cinema_notany_move">该影院没有影片资源</string>
    <string name="prevue">查看预告片</string>
    <string name="driving_forbid_watch_video">行车过程中不可观看视频</string>
    <string name="driving_watch_video_message">驾驶中观看视频属于危险行为，\n是否继续播放</string>
    <string name="driving_watch_video_tip">(在设置中可关闭该提醒)</string>
    <string name="driving_watch_video_replay">继续播放</string>
    <string name="driving_watch_video_stop_close">停止并关闭</string>
    <string name="hotel_landmark">%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%skm&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;¥%s起</string>
    <string name="check_date">入住日期-退房日期:\n %s-%s</string>
    <string name="price">¥%s</string>
    <string name="sure_book">确认预订</string>
    <string name="sure_book_room">确认预订 ¥%s</string>
    <string name="hotel_name">酒店名称:\n%s</string>
    <string name="room_type">房间类型:\n%s</string>
    <string name="room_count">预订房间数:\n%d间</string>
    <string name="book_call">联系方式:\n%s</string>
    <string name="no_room">已满</string>
    <string name="booking">预定</string>
    <string name="one_hour_to_confirm">1小时内确认</string>
    <string name="room_condition">%s&#160;&#160;|&#160;&#160;%s&#160;&#160;|&#160;&#160;%s</string>
    <string name="room_condition_cancel">%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%s&#160;&#160;&#160;&#160;|&#160;&#160;&#160;&#160;%s</string>
    <string name="no_window">无窗</string>
    <string name="has_window">有窗</string>
    <string name="some_window">部分有窗</string>
    <string name="no_net">无网</string>
    <string name="has_kuandai">有宽带</string>
    <string name="has_wifi">有WIFI</string>
    <string name="add_room">增加房间</string>
    <string name="cancel_not">不可取消</string>
    <string name="cancel_ok">可取消</string>
    <string name="confirm_right_away">立即确认</string>
    <string name="confirm_wait">等待确认</string>
    <string name="app_remove_notify">"抱歉，应用「%s」已下线"</string>
    <string name="book_room_count">预订房间:\n%d间</string>
    <string name="scan_code_cancel">扫码支付后:\n%s都可取消预约</string>
    <string name="scan_code_price">使用支付宝、微信扫码支付\n¥%s</string>
    <string name="cancel_order_success">取消预订成功</string>
    <string name="order_loading">已提交预定信息，等待商家反馈...</string>
    <string name="order_out_date">订单已过期，请您重新预定...</string>
    <string name="order_failed">预定失败，房间不足，预定金额稍后返回</string>
    <string name="order_success">预订成功</string>
    <string name="already_cancel_order">已取消预订</string>
    <string name="rescan_to_pay">尚未收到支付信息，请稍后再试</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_room_left">该房型的房间已满，无法预订</string>
    <string name="re_booking">重新预定</string>
    <string name="hotel_no_room_message">该酒店已无可预定房间</string>
    <string name="hotel_no_room_add">该房型的房间已满，无法增加</string>
    <string name="hotel_no_land">暂无地标</string>
    <string name="nearby_hotel">附近酒店</string>
    <string name="recommend_hotel">推荐酒店</string>
    <string name="address_distance">%sm</string>
    <string name="thousand_address_distance">%skm</string>
    <string name="load_more_loading">正在加载中...</string>
    <string name="load_complete">加载完成</string>
    <string name="load_no_more">没有更多数据了</string>
    <string name="load_error">加载失败,点击重试</string>
    <string name="im_guide">立即导航</string>
    <string name="room">房间</string>
    <string name="time">时间</string>
    <string name="play_time">开播</string>
    <string name="ticket_count">票数</string>
    <string name="my_order">我的购买</string>
    <string name="app_no_install_tip">当前应用还未安装</string>
    <string name="nearby_play">周边游</string>
    <string name="btn_navi">导航</string>
    <string name="btn_phone">电话</string>
    <string name="buy_tickets_now">立即购票</string>
    <string name="housekeeper_tip1">"Hi，我是您的出行管家"</string>
    <string name="housekeeper_tip2">"我会提供目的地相关的服务"</string>
    <string name="housekeeper_tip3">"变更目的地>>"</string>
    <string name="destination_food">目的地\n 美食</string>
    <string name="destination_scenic">目的地\n 景点</string>
    <string name="hotel_image">酒店外景</string>
    <string name="booking_three_room_type_price">%s&#160;&#160;&#160;&#160;<font color='#ffcc33'>s%</font></string>
    <string name="booking_three_room_count">%d间</string>
    <string name="travel_tip_str">提示</string>
    <string name="dialog_modify">修改</string>
    <string name="hotel_policy">酒店政策</string>
    <string name="hotel_policy_tip">酒店实际信息可能调整，仅供参考，请以实际入住为准</string>
    <string name="hotel_policy_time">入离时间</string>
    <string name="hotel_policy_cancel">取消政策</string>
    <string name="hotel_policy_add_bed">儿童及加床政策</string>
    <string name="hotel_policy_pet">宠物</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="select_room_type">选择房间类型</string>
    <string name="input_book_info">填写预定信息</string>
    <string name="pay_code">扫码支付</string>
    <string name="contact_str">联系方式</string>
    <string name="agree">同意</string>
    <string name="disclaimer_agreement">《免责声明协议》</string>
    <string name="accepted_before_using">使用系统需同意以下协议</string>
    <string name="confirm_number_correct">请确认您的手机号是否正确</string>
    <string name="already_paid">我已经支付了</string>
    <string name="ticket_accepting">(接收入场凭证)</string>
    <string name="cancel_appointment">可取消预约</string>
    <string name="check_in_data">入住日期</string>
    <string name="total_cost">总价格</string>
    <string name="room_number">预订房间数</string>
</resources>