<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="460px"
        android:layout_height="330px"
        android:layout_gravity="center"
        android:background="#6c94c1">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/rl_Loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/load_more_loading"
            android:textSize="40px"/>


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_Failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/load_error"
            android:textSize="40px"
            android:visibility="gone"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_End"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/load_no_more"
            android:textSize="40px"
            android:visibility="gone"/>

    </FrameLayout>

</FrameLayout>