<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="710px"
    android:layout_height="532px"
    android:background="@drawable/bg_dialog_date"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40px"
            android:text="@string/travel_tip_str"
            android:textSize="30px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancel_img"
            android:layout_width="28px"
            android:layout_height="28px"
            android:layout_marginEnd="50px"
            android:src="@drawable/icon_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:text="@string/confirm_number_correct"
        android:textSize="30px"
        android:layout_marginTop="40px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/phone_sure"
        android:text="手机号为179-7815-1812"
        android:textSize="30px"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/ticket_accepting"
        android:textSize="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px">

        <TextView
            android:id="@+id/btn_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_dialog_button_text"
            android:text="@string/sure"
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:textSize="30px" />

        <TextView
            android:id="@+id/btn_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_dialog_button_text"
            android:text="@string/dialog_modify"
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:textSize="30px" />
    </LinearLayout>

</LinearLayout>